[package]
name = "recisdb_web_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = {version = "1.37.0", features = ["full"]}
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.115"
rand = "0.8.5"